[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Font/comic-sans-ms_[it.allfont.net].ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/UI.gd" type="Script" id=2]
[ext_resource path="res://assets/other/quit.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 1 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="HBoxContainerLeft" type="HBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainerLeft"]
margin_right = 267.0
margin_bottom = 16.0
custom_constants/separation = 120

[node name="HBoxCoin" type="HBoxContainer" parent="HBoxContainerLeft/HBoxContainer2"]
margin_right = 131.0
margin_bottom = 16.0
custom_constants/separation = 10

[node name="Lbl_count_pipes_txt" type="Label" parent="HBoxContainerLeft/HBoxContainer2/HBoxCoin"]
margin_top = 2.0
margin_right = 20.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Punti:"
align = 1
valign = 1

[node name="Lbl_count_pipes" type="Label" parent="HBoxContainerLeft/HBoxContainer2/HBoxCoin"]
margin_left = 30.0
margin_top = 2.0
margin_right = 35.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1

[node name="Lbl_pipe_speed_txt" type="Label" parent="HBoxContainerLeft/HBoxContainer2/HBoxCoin"]
margin_left = 45.0
margin_top = 2.0
margin_right = 76.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Velocit√†:"

[node name="Lbl_pipe_speed" type="Label" parent="HBoxContainerLeft/HBoxContainer2/HBoxCoin"]
margin_left = 86.0
margin_top = 2.0
margin_right = 86.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="Lbl_pipe_timer_txt" type="Label" parent="HBoxContainerLeft/HBoxContainer2/HBoxCoin"]
margin_left = 96.0
margin_top = 2.0
margin_right = 121.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tempo:"

[node name="Lbl_pipe_timer" type="Label" parent="HBoxContainerLeft/HBoxContainer2/HBoxCoin"]
margin_left = 131.0
margin_top = 2.0
margin_right = 131.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainerLeft/HBoxContainer2"]
margin_left = 251.0
margin_right = 267.0
margin_bottom = 16.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureButton" type="TextureButton" parent="HBoxContainerLeft/HBoxContainer2/HBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 3 )
[connection signal="pressed" from="HBoxContainerLeft/HBoxContainer2/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
